-- ========================
--   TABLE CREATION
-- ========================

CREATE TABLE KUNDE (
    KUNDENNR        INTEGER NOT NULL,
    NACHNAME        VARCHAR(50),
    VORNAME         VARCHAR(50),
    GEBURTSDATUM    DATE,
    STRASSE         VARCHAR(50),
    HAUSNR          VARCHAR(6),
    PLZ             VARCHAR(5),
    ORT             VARCHAR(50),
    TELEFON         VARCHAR(25),
    EMAIL           VARCHAR(50)
);

CREATE TABLE LIEFERANT (
    LIEFERANTENNR   INTEGER NOT NULL,
    LIEFERANTENNAME VARCHAR(50),
    STRASSE         VARCHAR(50),
    HAUSNR          VARCHAR(6),
    PLZ             VARCHAR(5),
    ORT             VARCHAR(50),
    TELEFON         VARCHAR(25),
    EMAIL           VARCHAR(50)
);

CREATE TABLE ZUTAT (
    ZUTATENNR       INTEGER NOT NULL,
    BEZEICHNUNG     VARCHAR(50),
    EINHEIT         VARCHAR (25),
    NETTOPREIS      DECIMAL(10,2),
    BESTAND         INTEGER,
    LIEFERANT       INTEGER,
    KALORIEN        INTEGER,
    KOHLENHYDRATE   DECIMAL (10,2),
    PROTEIN         DECIMAL(10,2)
);

CREATE TABLE ERNAEHRUNGSKATEGORIE (
    KATEGORIE_ID SERIAL PRIMARY KEY,
    BEZEICHNUNG VARCHAR(50),
    BESCHREIBUNG TEXT
);

CREATE TABLE REZEPT (
    REZEPT_ID        SERIAL PRIMARY KEY,
    NAME             VARCHAR(50),
    BESCHREIBUNG     TEXT,
    KATEGORIE_ID     INT,
    ERSTELLUNGSDATUM DATE
);

CREATE TABLE REZEPT_ZUTAT (
    REZEPT_ID   INT,
    ZUTATENNR   INT,
    MENGE       DECIMAL(10,2),
    EINHEIT     VARCHAR(20)
);

CREATE TABLE BESTELLUNG (
    BESTELLNR       SERIAL PRIMARY KEY,
    KUNDENNR        INTEGER,
    BESTELLDATUM    DATE,
    RECHNUNGSBETRAG DECIMAL(10,2)
);

CREATE TABLE BESTELLUNGREZEPT (
    BESTELLNR   INTEGER NOT NULL,
    REZEPT_ID   INTEGER NOT NULL,
    MENGE       INTEGER
);

-- ========================
--   PRIMARY KEYS
-- ========================

ALTER TABLE KUNDE ADD PRIMARY KEY (KUNDENNR);
ALTER TABLE LIEFERANT ADD PRIMARY KEY (LIEFERANTENNR);
ALTER TABLE ZUTAT ADD PRIMARY KEY (ZUTATENNR);

ALTER TABLE REZEPT_ZUTAT ADD PRIMARY KEY (REZEPT_ID, ZUTATENNR);
ALTER TABLE BESTELLUNGREZEPT ADD PRIMARY KEY (BESTELLNR, REZEPT_ID);

-- ========================
--   FOREIGN KEYS
-- ========================

ALTER TABLE ZUTAT 
    ADD FOREIGN KEY (LIEFERANT) REFERENCES LIEFERANT (LIEFERANTENNR);

ALTER TABLE BESTELLUNG 
    ADD FOREIGN KEY (KUNDENNR) REFERENCES KUNDE (KUNDENNR);

ALTER TABLE REZEPT 
    ADD FOREIGN KEY (KATEGORIE_ID) REFERENCES ERNAEHRUNGSKATEGORIE (KATEGORIE_ID);

ALTER TABLE REZEPT_ZUTAT 
    ADD FOREIGN KEY (REZEPT_ID) REFERENCES REZEPT (REZEPT_ID),
    ADD FOREIGN KEY (ZUTATENNR) REFERENCES ZUTAT (ZUTATENNR);

ALTER TABLE BESTELLUNGREZEPT
    ADD FOREIGN KEY (BESTELLNR) REFERENCES BESTELLUNG (BESTELLNR),
    ADD FOREIGN KEY (REZEPT_ID) REFERENCES REZEPT (REZEPT_ID);