CREATE TABLE ERNAEHRUNGSKATEGORIE (
    KATEGORIE_ID SERIAL PRIMARY KEY,
    BEZEICHNUNG VARCHAR(50),
    BESCHREIBUNG TEXT
);

CREATE TABLE REZEPT_ALLERGENE (
    REZEPT_ID 		INT,
    ALLERGEN_ID 	INT
);

CREATE TABLE ALLERGENE (
    ALLERGEN_ID SERIAL PRIMARY KEY,
    BEZEICHNUNG VARCHAR(50),
    BESCHREIBUNG TEXT
);

CREATE TABLE REZEPT (
  REZEPT_ID        SERIAL PRIMARY KEY,
  NAME             VARCHAR(50),
  BESCHREIBUNG     TEXT,
  KATEGORIE_ID     INT,
  ERSTELLUNGSDATUM DATE 
);

CREATE TABLE REZEPT_ZUTAT (
  REZEPT_ID       INT,
  ZUTATENNR       INT,
  MENGE           DECIMAL(10,2),
  EINHEIT         VARCHAR(20)
);

ALTER TABLE REZEPT_ZUTAT ADD PRIMARY KEY (REZEPT_ID, ZUTATENNR);
ALTER TABLE REZEPT_ALLERGENE ADD PRIMARY KEY (REZEPT_ID, ALLERGEN_ID);

ALTER TABLE REZEPT ADD FOREIGN KEY (KATEGORIE_ID) REFERENCES ERNAEHRUNGSKATEGORIE (KATEGORIE_ID);

ALTER TABLE REZEPT_ZUTAT ADD FOREIGN KEY (REZEPT_ID) REFERENCES REZEPT (REZEPT_ID);
ALTER TABLE REZEPT_ZUTAT ADD FOREIGN KEY (ZUTATENNR) REFERENCES ZUTAT (ZUTATENNR);

ALTER TABLE REZEPT_ALLERGENE ADD FOREIGN KEY (REZEPT_ID) REFERENCES REZEPT (REZEPT_ID);
ALTER TABLE REZEPT_ALLERGENE ADD FOREIGN KEY (ALLERGEN_ID) REFERENCES ALLERGENE (ALLERGEN_ID);
